Fix text overflow & hero padding on tablet (#215)

--- a/client/src/components/GenericHero/styles.module.css
+++ b/client/src/components/GenericHero/styles.module.css
@@ -63,7 +63,13 @@
     & p {
         max-width: 30vw;
 
+        @media (--mq-m) {
+            padding: 0 2rem;
+            max-width: 50%;
+        }
+
         @media (--mq-s) {
+            padding: 0;
             max-width: 75%;
         }
     }
